--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-    <p>With new Version</p>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Hello World!</title>
+		<link rel="stylesheet" href="index.css" />
+	</head>
+	<body>
+		<h1>💖 Hello World!</h1>
+		<p>Welcome to your Electron application.</p>
+		<p>With new Version 3</p>
+	</body>
 </html>
